# user-api-polyglot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
database/: init.sql
impl/go/: Dockerfile  go.mod
impl/go/src/: main.go
impl/rust/: Cargo.toml  Dockerfile
impl/rust/src/: main.rs
